--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 # Node.js SocialLink App
 
-* Para levantar el backend toma en cuenta los siguientes pasos:
-  
-# Reconstruir los modulos de node e iniciar node
+- Para levantar el backend toma en cuenta los siguientes pasos:
+
+# Reconstruir los modulos de node y levantar el backend
 
 ```
 npm install
